<resources>
    <string name="app_name">FlebWebLV</string>
    <string name="app_descr">Registro de atividades do Programa de Controle da Leishmaniose Visceral</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Sobre</string>

    <!-- Gerais -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salva">Salvar</string>
    <string name="tratamento">Imóveis</string>
    <string name="volta">Voltar</string>
    <string name="txConsulta">Imóveis:</string>


    <!-- Tratamento -->
    <string name="txData">Data:</string>
    <string name="spMunicipio">Município:</string>
    <string name="spArea">Área:</string>
    <string name="spQuarteirao">Quarteirão:</string>
    <string name="rgExecucao">Execução:</string>
    <string name="rbSucen">Sucen</string>
    <string name="rbMunicipio">Município</string>
    <string name="txSinan">Sinan/Quarteirão:</string>
    <string name="spProduto">Produto:</string>
    <string name="spEspalhante">Espalhante:</string>

    <string name="txOrdem">Ordem:</string>
    <string name="tvSituacao">Situação Imóvel</string>
    <string name="rbTrab">Trabalhado</string>
    <string name="rbRec">Recusa</string>
    <string name="rbFech">Fechado</string>
    <string name="rbDesab">Desabitado</string>

    <string name="tvIntra">Intradomicílio/Cômodos</string>
    <string name="txExist">Existentes:</string>
    <string name="txBorrif">Borrifados:</string>
    <string name="tvNaoBorrif">Não Borrifados</string>
    <string name="txAcab">Acabamento:</string>
    <string name="txRecusa">Recusa:</string>
    <string name="txOutros">Outros:</string>

    <string name="tvPAbrigo">Peridomicílio/Abrigo de Animais</string>
    <string name="tvPParedes">Peridomicílio/Paredes</string>

    <string name="tvTratamento">Tratamento:</string>
    <string name="txInseticida">Inseticida (ml):</string>
    <string name="txEspalhante">Espalhante (ml):</string>

    <!-- Form Envio e Recebimento-->
    <string name="tvConecta">Conectado</string>
    <string name="tvImporta">Importar:</string>
    <string name="tvSistema">Sistema</string>
    <string name="tvCadastro">Cadastros</string>
    <string name="tvNivel">Nível:</string>
    <string name="tvMunicipio">Municipio</string>
    <string name="tvRegional">Regional</string>
    <string name="tvLocal">Local:</string>
    <string name="tvBotao">Importar</string>
    <string name="tvResumo">Registros a sincronizar:</string>
    <string name="btSync">Sincronizar</string>
    <string name="limpBotao">Excluir</string>

</resources>
