<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.sucen.flebweblv.TratamentoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="?attr/actionBarSize">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tratTxtData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Data"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/spMunicipio" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/tratSpMunicipio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/spArea"
            android:id="@+id/textView17" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/tratSpArea" />

        <TextView
            android:id="@+id/textView77"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="Identificador:" />

        <Spinner
            android:id="@+id/tratSpIdentificador"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/spQuarteirao"
            android:id="@+id/textView18" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/tratSpQuarteirao" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/rgExecucao"
            android:id="@+id/textView19" />

        <RadioGroup
            android:id="@+id/tratRgExecucao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/tratRbSucen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/rbSucen"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <RadioButton
                android:id="@+id/tratRbMunicipio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/rbMunicipio"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/tratTxtSinan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txSinan"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/spProduto"
            android:id="@+id/textView21" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/tratSpProduto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/spEspalhante"
            android:id="@+id/textView22" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/tratSpEspalhante" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tratamento"
            android:drawableRight="@drawable/prossegues"
            android:textSize="@dimen/font_size"
            android:paddingRight="60dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:id="@+id/btTratamentoDet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/txConsulta"
            android:textStyle="bold"
            android:id="@+id/textView27" />

        <LinearLayout
            android:orientation="horizontal"
            android:background="?attr/topoConsulta"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ordem"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textColor="?attr/textoConsulta"
                android:textStyle="bold"
                android:id="@+id/textView28" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Situaçao"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textColor="?attr/textoConsulta"
                android:textStyle="bold"
                android:id="@+id/textView29" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tratConsulta"
            android:background="?attr/backConsulta" />

    </LinearLayout>
</ScrollView>
