<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.sucen.flebweblv.PrincipalActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="?attr/actionBarSize">
        <TextView
            android:id="@+id/tvConecta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/vermelho"
            android:text="@string/tvConecta"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btSync"
            android:drawableRight="@drawable/sync"
            android:textSize="@dimen/font_size"
            android:paddingRight="60sp"
            android:id="@+id/btSincroniza" />
        <TextView
            android:id="@+id/tvResEnvio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvResumo"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</ScrollView>
