<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context="com.sucen.flebweblv.PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/tvConecta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/vermelho"
            android:paddingBottom="20dp"
            android:text="@string/tvConecta"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Button
            android:id="@+id/btSincroniza"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/sync"
            android:paddingTop="20dp"
            android:paddingRight="60sp"
            android:paddingBottom="20dp"
            android:text="@string/btSync"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/tvResEnvio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/tvResumo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>
</ScrollView>
